#cmake file for project association
#author: liuwenjun
#created:2014/02/20

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(capture)
set(CMAKE_USE_RELATIVE_PATHS ON)

if(MSVC)
set(CMAKE_LOCAL_DIRECTORY e:/usr/local)
include_directories(${CMAKE_LOCAL_DIRECTORY}/include)
LINK_DIRECTORIES (${CMAKE_LOCAL_DIRECTORY}/lib)
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)


MESSAGE(${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(src)