#cmake file for project association
#author: liuwenjun
#created:2014/02/20

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(parser)
set(CMAKE_USE_RELATIVE_PATHS ON)

if(DEFINED CMAKE_TMPBINARY_PATH)
set(PROJECT_SOURCE_DIR ${CMAKE_TMPBINARY_PATH})
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)


ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(src)
